[package]
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2018"
name = "cardbox-api-internal"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cardbox-core = { path = "../core" }
cardbox-app = { path = "../app" }
cardbox-db = { path = "../db" }
cardbox-settings = { path = "../settings" }
reqwest = { version = "0.11.4", default-features = false, features = ["json", "rustls-tls"] }
actix-rt = "2.2.0"
actix-swagger = "=0.3.0-beta.1"
actix-web = "4.0.0-beta.8"
actix-web-prometheus = { version = "0.1.2-beta.8", features = ["process"]}
prometheus = "0.12.0"
actix-http = "3.0.0-beta.8"
shrinkwraprs = "0.3.0"
async-trait = "0.1.50"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
once_cell = "1.8.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["raw_value"] }
serde_plain = "0.3.0"
time = "0.2.26"
tokio = "1.9.0"
eyre = "0.6.5"
color-eyre = "0.5.11"
tracing = "0.1.26"
thiserror = "1.0.26"
tracing-actix-web = { version = "0.4.0-beta.9", default-features = false, features = ["emit_event_on_error", "opentelemetry_0_15"]}
opentelemetry = "0.15.0"
url = "2.2.2"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
