[package]
name = "cardbox-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
hashbrown = "0.11.2"
cardbox-db = { path = "../db" }
cardbox-core = { path = "../core" }
cardbox-settings = { path = "../settings" }
tracing-log = "0.1.2"
rpmalloc = "0.2.2"
tracing-subscriber = "0.2.25"
tracing-appender = "0.1.2"
tracing-bunyan-formatter = { version = "0.2.6", default-features = false }
tracing = "0.1.29"
opentelemetry-jaeger = { version = "0.15.0", features = ["rt-tokio-current-thread"] }
opentelemetry = { version = "0.16.0", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = "0.15.0"
validator = "0.14.0"
uuid = { version = "0.8.2", features = ["v4"] }
async-trait = "0.1.51"
eyre = "0.6.5"
sqlx-core = { version = "0.5.9", default-features = false, features = ["postgres", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
actix-web = { version = "4.0.0-beta.9", default-features = false }
time = "0.2.27"
tokio = { version = "1.12.0", default-features = false, features = ["macros"] }
itertools = "0.10.1"

[dev-dependencies]
cardbox-app = { path = ".", features = ["testing"] }
actix-rt = "2.3.0"
serde_json = { version = "1.0.68", features = ["raw_value"] }
chrono = { version = "0.4.19", default-features = false, features = ["serde", "std", "clock"] }
lazy_static = "1.4.0"

[features]
testing = ["cardbox-core/testing"]
