[package]
name = "cardbox-app"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.10", default-features = false }
async-trait = "0.1.51"
cardbox-core = { path = "../core" }
cardbox-db = { path = "../db" }
cardbox-settings = { path = "../settings" }
eyre = "0.6.5"
fnv = "1.0.7"
hashbrown = "0.11.2"
itertools = "0.10.1"
opentelemetry = { version = "0.16.0", features = ["rt-tokio-current-thread"] }
opentelemetry-zipkin = { version = "0.14.0", default-features = false, features = ["reqwest-client"] }
opentelemetry-jaeger = { version = "0.15.0", default-features = false, features = ["rt-tokio-current-thread", "reqwest_collector_client"]}
rpmalloc = "0.2.2"
serde = { version = "1.0.130", features = ["derive"] }
sqlx-core = { version = "0.5.9", default-features = false, features = ["postgres", "json"] }
time = "0.3.4"
tokio = { version = "1.12.0", default-features = false, features = ["macros"] }
tracing = "0.1.29"
tracing-appender = "0.2.0"
tracing-bunyan-formatter = { version = "0.3.0", default-features = false }
cookie = "0.16.0-rc.1"
tracing-log = "0.1.2"
tracing-opentelemetry = "0.16.0"
tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }
uuid = { version = "0.8.2", features = ["v4"] }
validator = "0.14.0"

[dev-dependencies]
actix-rt = "2.3.0"
cardbox-app = { path = ".", features = ["testing"] }
chrono = { version = "0.4.19", default-features = false, features = ["serde", "std", "clock"] }
lazy_static = "1.4.0"
serde_json = { version = "1.0.68", features = ["raw_value"] }

[features]
testing = ["cardbox-core/testing"]
