[package]
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2018"
name = "cardbox-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
actix-web = { version = "4.0.0-beta.8", default-features = false, features = ["cookies"] }
chrono = { version = "0.4.19", features = ["std"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
time = "0.2.26"
uuid = { version = "0.8.2", features = ["v4"] }
futures = "0.3.15"
validator = "0.14.0"
validator_derive = "0.14.0"
thiserror = "1.0.25"
tracing = "0.1.26"
eyre = "0.6.5"
rand = "0.8.4"

mockall = { version = "0.10.2", optional = true }
sqlx-core = { version = "0.5.5", default-features = false }

[dev-dependencies]
actix-rt = "2.2.0"

[features]
testing = ["mockall"]
default = []