[package]
name = "cardbox-core"
version = "0.1.0"
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2021"
rust-version = "1.56"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.10", default-features = false, features = ["cookies"] }
async-trait = "0.1.51"
chrono = { version = "0.4.19", features = ["std"] }
eyre = "0.6.5"
futures = "0.3.17"
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.68", features = ["raw_value"] }
thiserror = "1.0.30"
time = "0.3.4"
tracing = "0.1.29"
uuid = { version = "0.8.2", features = ["v4"] }
validator = "0.14.0"
validator_derive = "0.14.0"

mockall = { version = "0.10.2", optional = true }
sqlx-core = { version = "0.5.9", default-features = false }

[dev-dependencies]
actix-rt = "2.3.0"

[features]
testing = ["mockall"]
default = []
