[package]
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2018"
name = "cardbox-db"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
cardbox-core = { path = "../core" }
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.14"
serde = "1.0.126"
serde_json = "1.0.64"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
thiserror = "1.0.25"

[dependencies.sqlx]
version = "0.5.5"
default-features = false
features = [
  "chrono",
  "postgres",
  "runtime-actix-native-tls",
  "macros",
  "migrate",
  "offline",
  "uuid"
]
