[package]
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2018"
name = "cardbox-db"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
cardbox-core = { path = "../core" }
cardbox-settings = { path = "../settings" }
chrono = { version = "0.4.19", default-features = false, features = ["serde", "std", "clock"] }
tracing = "0.1.26"
serde = "1.0.126"
serde_json = "1.0.64"
futures = "0.3.15"
uuid = { version = "0.8.2", features = ["serde", "v4"] }


[dependencies.sqlx]
version = "0.5.5"
default-features = false
features = [
    "uuid",
    "postgres",
    "chrono",
    "macros",
    "runtime-actix-native-tls",
    "offline",
    "json"
]
