[package]
name = "cardbox-db"
version = "0.1.0"
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
cardbox-core = { path = "../core" }
cardbox-settings = { path = "../settings" }
chrono = { version = "0.4.19", default-features = false, features = ["serde", "std", "clock"] }
futures = "0.3.17"
serde = "1.0.130"
serde_json = { version = "1.0.68", features = ["raw_value"] }
tracing = "0.1.29"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dependencies.sqlx]
version = "0.5.9"
default-features = false
features = [
  "uuid",
  "postgres",
  "chrono",
  "macros",
  "runtime-actix-rustls",
  "offline",
  "json",
]

[features]
inmemory-cache = []
distributed-cache = []
