[package]
authors = ["Sergey Sova <mail@sergeysova.com>"]
edition = "2018"
name = "cardbox-logic"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.15", features = ["std"]}
serde = {version = "1.0.115", features = ["derive"]}
time = "0.2.16"
uuid = {version = "0.8.1", features = ["v4"]}
validator = "0.10.1"
validator_derive = "0.10.1"
async-trait = "0.1.40"

[dev-dependencies]
insta = "0.16.1"
mockall = "0.7.2"
