[package]
name = "cardbox-settings"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.11.0", default-features = false, features = ["toml"] }
serde = { version = "1.0.130", features = ["derive"] }
